--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -1,6 +1,6 @@
 .sl-footer-container {
   width: 100%;
-  border: solid 1px #707070;
+  border-top: solid 1px #707070;
   background-color: #002c67;
   color: #e0e0e0;
 }
