--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 body {
   margin: 0;
 }
+div {
+  margin: 0;
+}
 a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+}
+ul li {
+  list-style: none;
 }
