--- a/src/components/common/Menu/Menu.css
+++ b/src/components/common/Menu/Menu.css
@@ -18,18 +18,44 @@
 .sl-header-menu {
   display: flex;
   justify-content: space-between;
-  font-size: 21px;
+  font-size: 17px;
   font-weight: 300;
   line-height: 1.5;
   color: #5c5c5c;
   width: 444px;
 }
+.sl-header-menu a:hover {
+  color: #002c67;
+  font-weight: normal;
+}
+.sl-sub-menu-open {
+  position: relative;
+}
+.sl-sub-menu-open:hover + .sl-sub-menu {
+  display: block;
+}
+.sl-sub-menu:hover {
+  display: block;
+}
+.sl-sub-menu {
+  display: none;
+  position: absolute;
+  font-size: 16px;
+  font-weight: 300;
+  color: #5c5c5c;
+  background-color: #f5f5f5;
+}
+
 .sl-header-my {
   display: flex;
   justify-content: space-between;
-  font-size: 18px;
+  font-size: 13px;
   font-weight: 300;
   line-height: 1.5;
   color: #707070;
-  width: 140px;
+  width: 105px;
+}
+.sl-header-my a:hover {
+  color: #002c67;
+  font-weight: normal;
 }
