--- a/src/components/common/TextInput/TextInput.css
+++ b/src/components/common/TextInput/TextInput.css
@@ -2,8 +2,9 @@
   margin-bottom: 8px;
 }
 .text-input-title {
-  font-size: 20px;
+  font-size: 14px;
   color: #707070;
+  margin-bottom: 7px;
 }
 .text-input-form {
   width: 100%;
@@ -12,7 +13,7 @@
   border: none;
   border-radius: 8px;
   background-color: #f5f5f5;
-  padding: 24px 12px;
-  color: #9e9e9e;
-  font-size: 22px;
+  padding: 18px 12px;
+  color: #b7b7b7;
+  font-size: 14px;
 }
