--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  font-family: Spoqa Han Sans;
+  word-break: break-word;
 }
 div {
   margin: 0;
@@ -9,6 +11,35 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
-ul li {
+ul {
   list-style: none;
+  padding-inline-start: 0;
+}
+li {
+  list-style: none;
+}
+
+@font-face {
+  font-family: "Spoqa Han Sans";
+  src: url("font/Spoqa Han Sans Regular.woff2") format("woff2");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Spoqa Han Sans";
+  src: url("font/Spoqa Han Sans Light.woff2") format("woff2");
+  font-style: normal;
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Spoqa Han Sans";
+  src: url("font/Spoqa Han Sans Thin.woff2") format("woff2");
+  font-style: normal;
+  font-weight: 100;
+}
+@font-face {
+  font-family: "Spoqa Han Sans";
+  src: url("font/Spoqa Han Sans Bold.woff2") format("woff2");
+  font-style: normal;
+  font-weight: bold;
 }
