--- a/src/components/common/Pagination/Pagination.css
+++ b/src/components/common/Pagination/Pagination.css
@@ -8,6 +8,7 @@
   background-color: #ffffff;
   border: solid 1px #707070;
   cursor: pointer;
+  padding: 1px 10.5px;
 }
 .pagination-page-button {
   font-size: 19px;
