FAQ 페이지 수정, tab 추가

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
 .notice-page-wrapper {
   padding-top: 160px;
 }
+.faq-page-wrapper {
+  padding-top: 130px;
+}
+.faq-page-tab {
+  margin: 20px 10px;
+}
 .login-page-container {
   width: 100%;
 }
