--- a/src/components/common/NoticeTable/NoticeTable.css
+++ b/src/components/common/NoticeTable/NoticeTable.css
@@ -24,7 +24,7 @@
 }
 .notice-table-item-title {
   display: flex;
-  padding: 20px 70px 20px 0px;
+  padding: 20px 40px 20px 0px;
   justify-content: space-between;
   align-items: center;
 }
@@ -35,7 +35,6 @@
 .notice-table-item-title-date {
   width: 140px;
   border-right: 1px solid #707070;
-  margin-right: 20px;
   text-align: center;
   font-weight: normal;
 }
@@ -51,14 +50,14 @@
   background-color: #dcdcdc;
   border-radius: 8px;
   padding: 6px 12px;
-  margin-left: 12px;
+  margin-left: 32px;
 }
 .notice-table-item-title-text {
   margin-left: 18px;
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
-  width: 600px;
+  max-width: 1000px;
   overflow: hidden;
 }
 .slide-down {
