--- a/src/components/common/MobileMenu/MobileMenu.css
+++ b/src/components/common/MobileMenu/MobileMenu.css
@@ -1,107 +1,110 @@
 @media screen and (min-width: 1024px) {
-  .sl-m-header-container {
-    display: none;
-  }
+    .sl-m-header-container {
+        display: none;
+    }
 }
 .sl-m-header-container {
-  border-bottom: 1px solid #dcdcdc;
+    border-bottom: 1px solid #dcdcdc;
 }
 .sl-m-header-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 77px;
-  padding: 0 21px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 77px;
+    padding: 0 21px;
 }
 .sl-m-header-menu-button {
-  cursor: pointer;
+    cursor: pointer;
 }
 .sl-m-header-logo {
 }
 .sl-m-header-my {
 }
 .dimmed {
-  background-color: rgba(44, 44, 44, 0.6);
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  -webkit-transition: all ease-in-out 0.3s;
-  transition: all ease-in-out 0.3s;
+    background-color: rgba(44, 44, 44, 0.6);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    -webkit-transition: all ease-in-out 0.3s;
+    transition: all ease-in-out 0.3s;
 }
 .dimmed.off {
-  opacity: 0;
-  z-index: -1;
+    opacity: 0;
+    z-index: -1;
 }
 .sl-m-menu-container {
-  background-color: #ffffff;
-  position: fixed;
-  top: 0px;
-  left: -300px;
-  height: 100vh;
-  width: 300px;
-  z-index: 20;
-  -webkit-transition: left 0.3s ease-in-out;
-  transition: left 0.3s ease-in-out;
+    background-color: #ffffff;
+    position: fixed;
+    top: 0px;
+    left: -300px;
+    height: 100vh;
+    width: 300px;
+    z-index: 20;
+    -webkit-transition: left 0.3s ease-in-out;
+    transition: left 0.3s ease-in-out;
 }
 .sl-m-menu-container.active {
-  left: 0px;
+    left: 0px;
 }
 .sl-m-menu-header {
-  height: 70px;
-  border-bottom: solid 1px #dcdcdc;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    height: 70px;
+    border-bottom: solid 1px #dcdcdc;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .sl-m-menu-header-close {
-  cursor: pointer;
+    cursor: pointer;
 }
 .sl-m-menu-list {
 }
 .sl-m-menu-item {
-  border-bottom: solid 1px #dcdcdc;
-  font-size: 20px;
-  font-weight: 300;
-  cursor: pointer;
+    border-bottom: solid 1px #dcdcdc;
+    font-size: 20px;
+    font-weight: 300;
+    cursor: pointer;
 }
-.sl-m-menu-item.active {
-  font-weight: normal;
-  color: #002c67;
+.sl-m-menu-item:hover,
+.sl-m-menu-item.active,
+.sl-m-menu-sub-item:hover,
+.sl-m-menu-sub-item.active {
+    font-weight: normal;
+    color: #002c67;
 }
 .sl-m-menu-item a {
-  padding: 15.5px 30px;
+    padding: 15.5px 30px;
 }
 .sl-m-menu-sub-open {
-  padding: 15.5px 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    padding: 15.5px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .sl-m-menu-sub-open.active {
-  background-color: #002c67;
-  color: #ffffff;
+    background-color: #002c67;
+    color: #ffffff;
 }
 .sl-m-menu-sub-list {
-  display: none;
-  background-color: #f5f5f5;
-  border-bottom: solid 1px #dcdcdc;
-  padding: 0 15px;
+    display: none;
+    background-color: #f5f5f5;
+    border-bottom: solid 1px #dcdcdc;
+    padding: 0 15px;
 }
 .sl-m-menu-sub-list.active {
-  display: block;
+    display: block;
 }
 .sl-m-menu-sub-item {
-  font-size: 17px;
-  font-weight: 300;
-  color: #272727;
+    font-size: 17px;
+    font-weight: 300;
+    color: #272727;
 }
 .sl-m-menu-sub-item a {
-  padding: 12.5px 10px;
+    padding: 12.5px 10px;
 }
 .sl-m-menu-sub-item + .sl-m-menu-sub-item {
-  border-top: solid 1px #e1e1e1;
+    border-top: solid 1px #e1e1e1;
 }
