푸터 스타일 조정

--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -1,61 +1,64 @@
 @media screen and (max-width: 767px) {
-  .sl-footer-container {
-    display: none;
-  }
+    .sl-footer-container {
+        display: none;
+    }
 }
 .sl-footer-container {
-  width: 100%;
-  border-top: solid 1px #707070;
-  background-color: #002c67;
-  color: #e0e0e0;
+    width: 100%;
+    border-top: solid 1px #707070;
+    background-color: #002c67;
+    color: #e0e0e0;
 }
 .sl-footer-wrapper {
-  max-width: 1280px;
-  margin: 0 auto;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+.sl-footer-wrapper a {
+    display: inline;
 }
 .sl-footer-top {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 16px;
-  border-bottom: solid 1px #204679;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px;
+    border-bottom: solid 1px #204679;
 }
 .sl-footer-logo {
-  margin-top: 27px;
+    margin-top: 27px;
 }
 .sl-footer-policy {
-  width: 300px;
-  margin-top: 45px;
-  display: flex;
-  justify-content: space-around;
-  font-size: 15px;
-  font-weight: 300;
+    width: 300px;
+    margin-top: 45px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 15px;
+    font-weight: 300;
 }
 .sl-footer-bottom {
-  position: relative;
-  font-size: 14px;
-  color: #e0e0e0;
-  font-weight: 300;
-  padding: 20px 16px 40px;
+    position: relative;
+    font-size: 14px;
+    color: #e0e0e0;
+    font-weight: 300;
+    padding: 20px 16px 40px;
 }
 .sl-footer-biz-info li + li {
-  margin-top: 6px;
+    margin-top: 6px;
 }
 .sl-footer-contact {
-  font-size: 15px;
-  margin-top: 20px;
+    font-size: 15px;
+    margin-top: 20px;
 }
 .sl-footer-contact span {
-  font-weight: bold;
-  margin-right: 10px;
+    font-weight: bold;
+    margin-right: 10px;
 }
 .sl-footer-sns {
-  position: absolute;
-  top: 15px;
-  right: 30px;
+    position: absolute;
+    top: 15px;
+    right: 30px;
 }
 .sl-footer-sns img {
-  cursor: pointer;
+    cursor: pointer;
 }
 .sl-footer-sns img + img {
-  margin-left: 12px;
+    margin-left: 12px;
 }
